--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+}
+
+
 /* Common Shared Style */
 body {
     font-family: 'Open Sans', sans-serif;
@@ -8,6 +13,50 @@ body {
     color: #FD6E0A;
 }
 
+/* Header related styles */
+.header {
+    background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+
+.banner {
+    padding: 40px 30px 1px 220px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.banner-greet{
+    font-size: 45px;
+    font-weight: 600;
+    color: #474747;
+    margin-bottom: 0;
+}
+.banner-name{
+    font-size: 85px;
+    font-weight: 700;
+    color: #181818;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.banner-description{
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 30px;
+    color: #757575;
+}
+.banner-items{
+    max-width: 580px;
+}
+
+.profile-pic {
+    width: 500px;
+    height: 600px;
+}
+
+
 /* nav related styles */
 nav {
     display: flex;
@@ -15,6 +64,7 @@ nav {
     justify-content: space-between;
     /* align-items is used to align items in positions */
     align-items: center;
+    padding: 0 220px;
 }
 
 .nav-title {
@@ -49,4 +99,29 @@ nav a {
     font-weight: 700;
     padding: 18px 35px 19px 36px;
 
+}
+
+/* Main Section Styles */
+
+/* About Me Styles */
+.about{
+    padding: 200px 150px;
+    border-radius: 10px;
+background-color: #FFF8F3;
+margin: 130px 0;
+}
+.section-title{
+    color:#181818;
+text-align: center;
+font-size: 35px;
+font-weight: 700;
+margin-bottom: 0;
+}
+.aboutm-desc{
+    color: #757575;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+margin-top: 30px;
+margin-bottom: 30px;
 }
