--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
 }
 
@@ -27,27 +27,31 @@ body {
     align-items: center;
     justify-content: space-between;
 }
-.banner-greet{
+
+.banner-greet {
     font-size: 45px;
     font-weight: 600;
     color: #474747;
     margin-bottom: 0;
 }
-.banner-name{
+
+.banner-name {
     font-size: 85px;
     font-weight: 700;
     color: #181818;
     margin-top: 5px;
     margin-bottom: 20px;
 }
-.banner-description{
+
+.banner-description {
     font-size: 18px;
     font-weight: 400;
     margin-top: 0;
     margin-bottom: 30px;
     color: #757575;
 }
-.banner-items{
+
+.banner-items {
     max-width: 580px;
 }
 
@@ -103,25 +107,128 @@ nav a {
 
 /* Main Section Styles */
 
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+main section {
+    margin-top: 130px;
+}
+
 /* About Me Styles */
-.about{
+.about {
     padding: 200px 150px;
     border-radius: 10px;
-background-color: #FFF8F3;
-margin: 130px 0;
+    background-color: #FFF8F3;
+    margin: 130px 0;
 }
-.section-title{
-    color:#181818;
-text-align: center;
-font-size: 35px;
-font-weight: 700;
-margin-bottom: 0;
+
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    margin-bottom: 0;
 }
-.aboutm-desc{
+
+.aboutm-desc {
     color: #757575;
-text-align: center;
-font-size: 18px;
-font-weight: 400;
-margin-top: 30px;
-margin-bottom: 30px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.about-inf {
+    text-align: center;
+}
+
+.what-i-do-desc {
+    text-align: center;
+    padding: 0 150px 0 150px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+/* Skill related styles */
+.skill-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px 45px;
+    border-radius: 5px;
+    background-color: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-title {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+/* Resume Details */
+.section-title {
+    margin-bottom: 117px;
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.resume-container {
+    display: flex;
+    gap: 60px;
+}
+
+.resume-column{
+
+}
+.resume-column-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 30px;
+    
+}
+
+.resume-item{
+    padding-right: 10px;
+}
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-item-institute {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.resume-item-discriotion {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
+.hr {
+    margin-bottom: 30px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 130px;
 }
