--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -189,20 +189,20 @@ main section {
     gap: 60px;
 }
 
-.resume-column{
+.resume-column {}
 
-}
 .resume-column-title {
     color: #474747;
     font-size: 30px;
     font-weight: 700;
     margin-bottom: 30px;
-    
+
 }
 
-.resume-item{
+.resume-item {
     padding-right: 10px;
 }
+
 .resume-item-title {
     color: #474747;
     font-size: 25px;
@@ -227,8 +227,38 @@ main section {
 .hr {
     margin-bottom: 30px;
 }
-.download-cv{
+
+.download-cv {
     text-align: center;
     margin-top: 50px;
     margin-bottom: 130px;
+}
+
+/* Footer Styles */
+footer {
+    display: flex;
+    background-color: #FFF8F3;
+    padding: 130px 230px;
+    gap: 117px;
+}
+
+.footer-item {
+    max-width: 562px;
+}
+
+.footer-item-heading {
+    color: #181818;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.footer-item-description {
+    color: #474747;
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+.social-links{
+    margin-right: 24px;
 }
